--- a/data/explorer.css
+++ b/data/explorer.css
@@ -12,6 +12,27 @@ body {
     z-index: 15;
 }
 
+#overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: #000;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    z-index: 14;
+}
+
+#loading-anim {
+    width: 220px;
+    height: 19px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -9px 0 0 -110px;
+}
+
 #content {
     margin: 10px 10px 0px 20px;
 }
