--- a/explorer.css
+++ b/explorer.css
@@ -34,6 +34,19 @@ body {
     margin: -9px 0 0 -110px;
 }
 
+#detail-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    /*opacity: 0.7;*/
+    /*filter: alpha(opacity=70);*/
+    z-index: 14;
+    display: none;
+}
+
 /*
 
 #content {
