Improve search results style
- No more wrapping for long descriptions, instead they are hidden with
ellipsis.
- Make table use more of the page width.

--- a/explorer.css
+++ b/explorer.css
@@ -45,8 +45,22 @@ body {
     display: none;
 }
 
+#search-results-table {
+    width: 100%;
+}
+
 #search-results-table td {
     cursor: pointer;
+    white-space: nowrap;
+}
+
+.search-results-field-name,
+.search-results-field-description {
+    max-width: 400px;
+    min-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #search-results-table tr th:first-child {
