--- a/explorer.css
+++ b/explorer.css
@@ -2,18 +2,17 @@
 body {
     margin: 0px;
     padding 0px;
-    min-height: 75rem;
 }
 
 #github-banner img {
     position: absolute;
     top: 0;
-    right: 0; 
+    right: 0;
     border: 0;
     z-index: 15;
 }
 
-#overlay {
+#loading-overlay {
     position: absolute;
     left: 0;
     top: 0;
@@ -34,87 +33,52 @@ body {
     margin: -9px 0 0 -110px;
 }
 
-/*
-
-#content {
-    margin: 10px 10px 0px 20px;
+#probe-detail-view {
+    padding-top: 20px;
 }
 
-.tabrow {
-    text-align: left;
-    list-style: none;
-    margin: 10px 0px 0px 0px;
-    padding: 0px 0px 0px 10px;
-    line-height: 24px;
-    height: 26px;
-    overflow: hidden;
-    font-size: 12px;
-    font-family: verdana;
-    position: relative;
+#detail-probe-name {
+    display: inline;
 }
-.tabrow li {
-    border: 1px solid #AAA;
-    background: #D1D1D1;
-    background: -o-linear-gradient(top, #ECECEC 50%, #D1D1D1 100%);
-    background: -ms-linear-gradient(top, #ECECEC 50%, #D1D1D1 100%);
-    background: -moz-linear-gradient(top, #ECECEC 50%, #D1D1D1 100%);
-    background: -webkit-linear-gradient(top, #ECECEC 50%, #D1D1D1 100%);
-    background: linear-gradient(top, #ECECEC 50%, #D1D1D1 100%);
-    display: inline-block;
-    position: relative;
-    z-index: 0;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #FFF;
-    text-shadow: 0 1px #FFF;
-    margin: 0 -5px;
-    padding: 0 20px;
+
+.hidden {
+    display: none;
 }
-.tabrow a {
-    color: #555;
-    text-decoration: none;
+
+#stats {
+    font-style: italic;
+    font-size: 90%;
+    margin-bottom: 10px;
 }
-.tabrow li.selected {
-    background: #FFF;
-    color: #333;
-    z-index: 2;
-    border-bottom-color: #FFF;
+
+#measurements {
+    padding-left: 0px !important;
 }
-.tabrow:before {
-    position: absolute;
-    content: " ";
+
+#search-results-table {
     width: 100%;
-    bottom: 0;
-    left: 0;
-    border-bottom: 1px solid #AAA;
-    z-index: 1;
-}
-.tabrow li:before,
-.tabrow li:after {
-    border: 1px solid #AAA;
-    position: absolute;
-    bottom: -1px;
-    width: 5px;
-    height: 5px;
-    content: " ";
-}
-.tabrow li:before {
-    left: -6px;
-    border-bottom-right-radius: 6px;
-    border-width: 0 1px 1px 0;
-    box-shadow: 2px 2px 0 #D1D1D1;
-}
-.tabrow li:after {
-    right: -6px;
-    border-bottom-left-radius: 6px;
-    border-width: 0 0 1px 1px;
-    box-shadow: -2px 2px 0 #D1D1D1;
-}
-.tabrow li.selected:before {
-    box-shadow: 2px 2px 0 #FFF;
-}
-.tabrow li.selected:after {
-    box-shadow: -2px 2px 0 #FFF;
 }
 
-*/
+#search-results-table td {
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.search-results-field-name,
+.search-results-field-description {
+    max-width: 400px;
+    min-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#search-results-table tr th:first-child {
+    background-color: white;
+    border: none;
+}
+
+#search-results-table tr td:first-child {
+    background-color: white;
+    border: none;
+}
