Add longitudinal names for scalars and histograms

--- a/explorer.css
+++ b/explorer.css
@@ -82,3 +82,8 @@ body {
     background-color: white;
     border: none;
 }
+
+.code {
+    font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
+    font-size: 85%;
+}
