--- a/explorer.css
+++ b/explorer.css
@@ -24,13 +24,24 @@ body {
     z-index: 14;
 }
 
-#loading-anim {
-    width: 220px;
-    height: 19px;
+#loading-overlay .progress {
+    width: 76%;
+    /*height: 10%;*/
+    height: 30px;
     position: absolute;
     top: 50%;
-    left: 50%;
-    margin: -9px 0 0 -110px;
+    left: 12%;
+    border: 6px solid grey;
+}
+
+#loading-overlay .progress-bar {
+    width: 100%;
+    height: 100%;
+}
+
+#last-updated {
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 80%;
 }
 
 #probe-detail-view {
