Upstream probe-dictionary updates from georgfs fork (#37)
* Make detailView probe id lookups case insensitive

Linking from the TMO dashboard, the probe ids used to get into the
detail view may be lower-case.
The probe id keys in the probe dictionary are case sensitive.
This means some probes couldn’t easily be opened from TMO links.

To fix this, add a case insensitive lookup to get properly cased probe
ids.

* Fix page title

* Use bootstrap style for progress bar

* Fix reporting link

* Fix display of last update

* Use bootstrap progress bar

* Use Font Awesome for nav button icons

* Merge stats view into the main page

This allows sharing most between the search and the stats view.
This uses bootstrap tabs to switch between the views.

* Allow searching probes on any channel

* Only use "any" channel for the search view

* Fix detail view when using "any channel" filter

* Only show one row per channel and probe in search results table

* Fix detail view breakage

* Don't show release channel in detail view if it probe is not opt out

* Filter out aurora probes in search results

* Work around performance.mark not being available in Safari

* Properly support "any" channel in init code

* Default to "any" channel and showing prerelease probe

We should by default search through all probes to avoid user confusion.

* Fix CSS typo

* Emphasise the text search as primary control

* Don't show aurora channel info in detail view

* Make first column in detail view shrink to content size

* Slight styling change for detail filter

* Margin fix for search fields.

* Factor out dashboard & dataset link generation

* Link to hardware report for hw & os related probes

* Add main_summary dataset mappings to existing mappings

* Add simplemeasurement dataset mappings

* Add some explicitic main_summary histogram mappings

* Add programmatic main_summary mappings

* Add event dataset mappings

* A

--- a/explorer.css
+++ b/explorer.css
@@ -1,7 +1,11 @@
 
 body {
     margin: 0px;
-    padding 0px;
+    padding: 0px;
+}
+
+.navbar i.fa {
+    margin-right: 2px;
 }
 
 #github-banner img {
@@ -24,13 +28,32 @@ body {
     z-index: 14;
 }
 
-#loading-anim {
-    width: 220px;
-    height: 19px;
+#loading-overlay .progress {
+    width: 76%;
+    /*height: 10%;*/
+    height: 30px;
     position: absolute;
     top: 50%;
-    left: 50%;
-    margin: -9px 0 0 -110px;
+    left: 12%;
+    border: 6px solid grey;
+}
+
+#loading-overlay .progress-bar {
+    width: 100%;
+    height: 100%;
+}
+
+#last-updated {
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 80%;
+}
+
+#probe-filters {
+    font-size: 90%;
+}
+
+#probe-filters .form-control {
+    font-size: 90%;
 }
 
 #probe-detail-view {
@@ -39,10 +62,6 @@ body {
 
 #detail-probe-name {
     display: inline;
-}
-
-.hidden {
-    display: none;
 }
 
 #stats {
@@ -86,4 +105,20 @@ body {
 .code {
     font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
     font-size: 85%;
+}
+
+.table td.fit,
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
+
+.table td.grow,
+.table th.grow {
+    white-space: nowrap;
+    width: 100%;
+}
+
+.hidden {
+    display: none;
 }
