--- a/explorer.css
+++ b/explorer.css
@@ -123,6 +123,12 @@ body {
     display: none;
 }
 
-.navbar-nav > li > a:hover {
-    color: #c0c0c0;
+.nav-item {
+    font-size: larger;
+    padding-right: 8px;
+}
+
+.nav-item > a {
+    background-color: #5496cf;
+    border-radius: 4px;
 }
