add link to new probe dictionary

--- a/explorer.css
+++ b/explorer.css
@@ -159,3 +159,12 @@ th {
 #detail-probe-name {
     overflow-wrap: break-word;
 }
+
+.callout {
+    position: relative;
+    width: 100%;
+    z-index: 15;
+    text-align: center;
+    line-height: 2;
+    background-color: #fff;
+}
